Style fix, align bank nav icons bottom

--- a/web/static/css/kristin.less
+++ b/web/static/css/kristin.less
@@ -169,9 +169,11 @@
 
 #bank-nav {
 	text-align: center;
+	font-size: 0em;
 	background: url('../img/bg-bank-bannisters.png') no-repeat center bottom;
 	a {
 		display: inline-block;
+		vertical-align: bottom;
 		width: 180px; height: 120px;
 		margin: 0 30px;
 		background: url('../img/icons-bank.png');
